<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/water_fill_anim1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="796dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/water_flow" />

    <TextView
        android:id="@+id/water_level_var"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratmedium"
        android:text="45%"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/press_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/press_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginBottom="-10dp"
        android:background="@drawable/custom_button"
        android:text="@string/edit"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/main_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/on_button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginEnd="-10dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/custom_button"
        android:text="@string/on"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/main_btn"
        app:layout_constraintEnd_toStartOf="@+id/main_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/off_button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="-10dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/custom_button"
        android:text="@string/off"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/press_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/main_btn" />

    <Button
        android:id="@+id/main_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/drop_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="220dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/water_level_var">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="200dp"
            android:layout_height="140dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow>

                <TextView
                    android:id="@+id/tank_name"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tank_name_var"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/tank"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/life_time"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/life_time"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/life_time_var"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/_2_days"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/total_vol"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/total_vol"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/total_vol_var"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/_20_litre"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/line_water"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/line_water"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/line_water_var"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/a"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/pump"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/pump"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/pump_var"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/off"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/status"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/status"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/status_var"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/nf"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>


        </TableLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/informative"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/dotview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/arrow_right_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/arrowright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/arrow_left_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/arrowleft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>